Finished Rock, paper, scissors'

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -10,22 +10,21 @@
 <body>
     <div class="header">
         <div class="left">
-            <div class="logo">
-            <img src="../images/taco-8029161_640.png">
-            </div>
+            <img id="img1" src="../images/taco-8029161_640.png">
         </div>
         <div class="right">
             <ul>
-                <li><a href="#">Link 1</a></li>
-                <li><a href="#">Link 2</a></li>
-                <li><a href="#">Link 3</a></li>
+                <li><a href="#">Tacos</a></li>
+                <li><a href="#">Burritos</a></li>
+                <li><a href="#">Quesadillas</a></li>
             </ul>
         </div>
     </div>
     <div class="sub-header">
-        <div class="sub">
+        <div class="title">
         <div>This website is awesome</div>
-        <button>Sign up</button>
+        <div class="sub-text">Website is a work in progress and has a picture of a taco as the logo.</div>
+        <button id="button1">Sign up</button>
         </div>
         <img id="img2" src="../images/tacos-pastor-4505032_1280.jpg">
     </div>
