Finished RPS, added buttons, changed logic

--- a/Java/DOM/index.html
+++ b/Java/DOM/index.html
@@ -27,7 +27,7 @@
         btn.onclick = () => alert("Hello world");
     </script>
     <button onclick="alert('Hello World')">Click Me</button>
-    <button id="btn">Click Me</button>
+    <!-- <button id="btn">Click Me</button> -->
 
 </body>
 </html>
