--- a/ro-pa-sci/index.html
+++ b/ro-pa-sci/index.html
@@ -7,6 +7,27 @@
 </head>
 <body>
     <script>
+        const h1 = document.createElement('h1');
+        const div = document.createElement('div');
+        div.appendChild(h1);
+        h1.textContent = 'Rock, Paper, or Scissors?'
+        document.body.appendChild(div);
+        const resultsContainer = document.createElement('div');
+        resultsContainer.style.display = 'flex';
+        resultsContainer.style.flexDirection = 'column';
+        document.body.appendChild(resultsContainer);
+        const computerDiv = document.createElement('div');
+        const playerDiv = document.createElement('div');
+        const scoreDiv = document.createElement('div');
+        resultsContainer.appendChild(computerDiv);
+        resultsContainer.appendChild(playerDiv);
+        resultsContainer.append(scoreDiv);
+    </script>
+    <button id="rock-button">Rock</button>
+    <button id="paper-button">Paper</button>
+    <button id="scissor-button">Scissors</button>
+    <script>
+
         function getComputerChoice() {
            const randomchoice = Math.random();
            if (randomchoice < .33){
@@ -17,66 +38,104 @@
             return 'scissors';
            }
         }
-        function getHumanChoice() {
-            const choice = prompt('Rock, Paper, Scissors').toLowerCase()
-            return choice;
-        }
+        // function getHumanChoice() {
+        //     const choice = prompt('Rock, Paper, Scissors').toLowerCase()
+        //     return choice;
+        // }
         let humanScore = 0
         let computerScore = 0
         let computer = getComputerChoice()
-        let player = getHumanChoice()
+        // let player = getHumanChoice()
 
         function playRound(humanChoice, computerChoice) {
             if (humanChoice === 'rock' && computerChoice === 'paper') {
                 computerScore += 1;
                 console.log('You lose! Paper beats Rock.');
-            } else if (humanChoice == 'paper' && computerChoice == 'scissors') {
+            } else if (humanChoice === 'paper' && computerChoice === 'scissors') {
                 computerScore += 1
                 console.log('You lose! Scissors beats Paper.');
-            } else if (humanChoice == 'scissors' && computerChoice == 'paper') {
+            } else if (humanChoice === 'scissors' && computerChoice === 'paper') {
                 humanScore += 1
                 console.log('You win! Scissors beats Paper.');
             } else if (humanChoice === computerChoice) {
                 console.log("It's a draw!"); 
-            } else {
-                humanScore += 1;
-                console.log(`You win! ${humanChoice} beats ${computerChoice}.`);
+            } else if (computerChoice === 'scissors' && humanChoice === 'paper'){
+                computerScore += 1
+            } else if (computerChoice === 'rock' && humanChoice === 'scissors') {
+                computerScore += 1
             }
-            console.log('Computer chose '+ computer + '.')
-            console.log('Player chose ' + player + '.')
-            console.log(`Human Score: ${humanScore} | Computer Score: ${computerScore}`);
-        }
 
-        function playgame() {
-        playRound(player, computer);
-        computer = getComputerChoice();
-        player = getHumanChoice();
-        playRound(player, computer);
-        computer = getComputerChoice();
-        player = getHumanChoice();
-        playRound(player, computer);
-        computer = getComputerChoice();
-        player = getHumanChoice();
-        playRound(player, computer);
-        computer = getComputerChoice();
-        player = getHumanChoice();
-        playRound(player, computer);
-        computer = getComputerChoice();
-        player = getHumanChoice();
-        playRound(player, computer);
-        computer = getComputerChoice();
-        player = getHumanChoice();
-        if (humanScore > computerScore) {
-            console.log('Game over, Human wins ' + humanScore + '-' + computerScore + '.')
-        } else if (humanScore < computerScore) {
-            console.log('Game over, Computer wins ' + humanScore + '-' + computerScore + '.')
-        } else {
-            console.log('It\'s a tie!')
+            computerDiv.textContent = ('Computer chose '+ computerChoice + '.')
+            playerDiv.textContent = ('Player chose ' + humanChoice + '.')
+            scoreDiv.textContent = (`Human Score: ${humanScore} | Computer Score: ${computerScore}`);
         }
+        const rockButton = document.getElementById('rock-button');
+        const paperButton = document.getElementById('paper-button');
+        const scissorButton = document.getElementById('scissor-button');
+        rockButton.addEventListener('click', doRock);
+        paperButton.addEventListener('click', doPaper);
+        scissorButton.addEventListener('click', doScissors);
+
+        function doRock(){
+            const player = 'rock';
+            playRound(player,getComputerChoice());
+            if (computerScore === 3) {
+                h1.textContent = "Game over, Computer Wins!";
+            }
+            else if (humanScore === 3) {
+                h1.textContent = "Game over, YOU Win!";
+            }
         }
-        // console.log(playRound(player, computer))
-        playgame();
+        function doPaper(){
+            const player = 'paper';
+            playRound(player, getComputerChoice());
+            if (computerScore === 3) {
+                h1.textContent = "Game over, Computer Wins!";
+            }
+            else if (humanScore === 3) {
+                h1.textContent = "Game over, YOU Win!";
+            }
+        }
+        function doScissors(){
+            const player = 'scissors';
+            playRound(player, getComputerChoice());
+            if (computerScore === 3) {
+                h1.textContent = "Game over, Computer Wins!";
+            }
+            else if (humanScore === 3) {
+                h1.textContent = "Game over, YOU Win!";
+            }
+        }
+        // function playgame() {
+        // playRound(player, computer);
+        // computer = getComputerChoice();
+        // player = getHumanChoice();
+        // playRound(player, computer);
+        // computer = getComputerChoice();
+        // player = getHumanChoice();
+        // playRound(player, computer);
+        // computer = getComputerChoice();
+        // player = getHumanChoice();
+        // playRound(player, computer);
+        // computer = getComputerChoice();
+        // player = getHumanChoice();
+        // playRound(player, computer);
+        // computer = getComputerChoice();
+        // player = getHumanChoice();
+        // playRound(player, computer);
+        // computer = getComputerChoice();
+        // player = getHumanChoice();
+        // if (humanScore > computerScore) {
+        //     console.log('Game over, Human wins ' + humanScore + '-' + computerScore + '.')
+        // } else if (humanScore < computerScore) {
+        //     console.log('Game over, Computer wins ' + humanScore + '-' + computerScore + '.')
+        // } else {
+        //     console.log('It\'s a tie!')
+        // }
+        // }
+        // playgame();
 
     </script>
 </body>
+
 </html>
