FInished Etch sketch project

--- a/Java/arrays-loops/index.html
+++ b/Java/arrays-loops/index.html
@@ -24,8 +24,8 @@
         return mappedCamel.join('');
         }
     console.log(camelize("background-color") == 'backgroundColor');
-    camelize("list-style-image") == 'listStyleImage';
-    camelize("-webkit-transition") == 'WebkitTransition';
+    console.log(camelize("list-style-image") == 'listStyleImage');
+    console.log(camelize("-webkit-transition") == 'WebkitTransition');
     </script>
 </body>
 </html>
