--- a/calc/index.html
+++ b/calc/index.html
@@ -3,10 +3,83 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Calculator</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<script src="main.js"></script>
 <body>
-    <script src="main.js"></script>
+    <div id="calContainer">
+    <script>
+        const container = document.getElementById('calContainer');
+
+        const h1 = document.createElement('h1');
+        calContainer.appendChild(h1);
+        h1.textContent = 'CALCULATOR'
+        const display = document.createElement('div');
+        display.id = 'display';
+        display.textContent = '0';
+        container.appendChild(display);
+
+        const buttonsContainer = document.createElement('div');
+        buttonsContainer.id = 'buttonContainer';
+        container.appendChild(buttonsContainer);
+        const buttons = ['1','2','3','4','5','6','7','8','9','+','-','*','/','=','C'];
+        buttons.forEach(label => {
+            const btn = document.createElement('button');
+            btn.textContent = label;
+            btn.addEventListener('click', () => handleButtonClick(label));
+            buttonsContainer.appendChild(btn);
+        });
+        
+        let currentInput = '';
+        let firstNumber = null;
+        let operator = null;
+
+        function handleButtonClick(label){
+            if (!isNaN(label)) {
+                currentInput += label;
+                display.textContent = currentInput;
+            } else if (['-','+','*','/'].includes(label)){
+                firstNumber = parseFloat(currentInput);
+                operator = label;
+                currentInput = '';
+            } else if (label === '=') {
+                const secondNumber = parseFloat(currentInput);
+                let result;
+                if (operator === '+') result = add(firstNumber, secondNumber);
+                if (operator === '-') result = subtract(firstNumber, secondNumber);
+                if (operator === '*') result = multiply(firstNumber, secondNumber);
+                if (operator === '/') result = divide(firstNumber, secondNumber);
+
+                display.textContent = result;
+                currentInput = result;
+            } else if ( label === 'C'){
+                currentInput = '';
+                firstNumber = null;
+                operator = null;
+                display.textContent = '';
+            }
+        }
+
+        function add(a,b) {
+            return a + b;
+        }
+        function subtract(a,b){
+            return a - b;
+        }
+
+        function multiply(a,b){
+            return a * b;
+        }
+        function divide(a, b) {
+            if (b === 0) {
+                return 'null';
+            } else {
+                return a / b;
+            }
+        }
+
+
+    </script>
+    </div>
 </body>
 </html>
