--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -32,16 +32,14 @@
         <div>Some Random Info</div>
         <div class="cards">
             <div class="box" id="box1">one</div>
-            <div class="box"id="box2">two</div>
-            <div class="box"id="box3">three</div>
-            <div class="box"id="box4">four</div>
+            <div class="box" id="box2">two</div>
+            <div class="box" id="box3">three</div>
+            <div class="box" id="box4">four</div>
          </div>
     </div>
-    <div class="bottom">
-            quote - quote
-    </div>
+    <div class="bottom">Interesting quote I never found.</div>
     <div class="footer">
-        Foot
+        Sign up Link
     </div>
 </body>
 </html>
